# UNISA

./: .gitignore  README.md  new.py  slack.py
year1/COS1511/: README.md
year1/COS1512/: README.md
year1/EUP1501/: Assignment 1.docx  Assignment 3.docx  Assignment 5.docx  Assignment 8.docx  Assignment 8.xlsx
year1/MAT1512/: Notes for MAT1512.docx
year2/APM2611/: Notes for APM2611.docx  README.md
year2/APM2613_2024/: Notes for APM2613.docx  README.md
year2/COS2601/: Notes for COS2601.docx  README.md  ~$tes for COS2601.docx
year2/COS2611/: README.md
year2/COS2614/: Notes for COS2614.docx  README.md  ~$tes for COS2614.docx  ~$tes for COS2614_2.docx
year2/COS2633/: GaussSiedel.py  GaussianEliminationWIthoutPivoting.py  GaussianEliminationWithScaledPartialPivoting.py  JacobiMethod.py  LU.py  Matrices_GaussSiedel.py  Matrices_GaussianEliminationWithScaledPartialPivoting.py  Matrices_JacobiMethod.py  Matrices_SuccessiveOverRelaxation.py  Notes for COS2633.docx  README.md  Roots_BisectionMethod.py  Roots_NewtonRaphsonMethod.py  SuccessiveOverRelaxation.py  requirements.txt  ~$tes for COS2633.docx  ~WRL0005.tmp  ~WRL3273.tmp
year2/COS2661/: Notes for COS2661.docx  README.md  ~$tes for COS2661.docx
year2/MAT1613/: Notes for MAT1613.docx  README.md  ~$tes for MAT1613.docx
year2/MAT2611/: ASS1.docx  Notes for MAT2611 - SUP.docx  Notes for MAT2611.docx  README.md  ~$tes for MAT2611 - SUP.docx
year2/MAT2611_2024/: Notes for MAT2611.docx
year2/MAT2612/: Notes for MAT2612.docx  README.md  (+1 more)
year3/COS3711_2025/ASS1/question2/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Transaction.cpp  Transaction.h  TransactionList.cpp  TransactionList.h  main.cpp  resources.qrc  transactions.txt
year3/COS3711_2025/ASS1/question3/: CMakeLists.txt  CalculatorWindow.cpp  CalculatorWindow.h  FocusableSpinBox.h  Operation.cpp  Operation.h  OperationFactory.cpp  OperationFactory.h  main.cpp
(+233 files in other folders)
